{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 21,
  "lineage": "935f343a-9589-6a85-490a-7cad9f323841",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0743c4962cfce6370",
            "arn": "arn:aws:ec2:us-east-1:626635413648:elastic-ip/eipalloc-0743c4962cfce6370",
            "association_id": "eipassoc-075a0ed8fd4589358",
            "domain": "vpc",
            "id": "eipalloc-0743c4962cfce6370",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb82dd4eade04e30",
            "private_dns": "ip-10-0-101-119.ec2.internal",
            "private_ip": "10.0.101.119",
            "public_dns": "ec2-52-70-101-116.compute-1.amazonaws.com",
            "public_ip": "52.70.101.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_igw_eip"
            },
            "tags_all": {
              "Name": "demo_igw_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ce3a383d1a1e5a6",
            "arn": "arn:aws:ec2:us-east-1:626635413648:instance/i-0c06957fb9d33f8b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c06957fb9d33f8b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cadfd461545214bb",
            "private_dns": "ip-10-0-101-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.243",
            "public_ip": "3.222.188.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec3cee6467075fb8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c288af1570ed1e6c",
            "tags": {
              "Name": "Ubuntu EC2 Server"
            },
            "tags_all": {
              "Name": "Ubuntu EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d93e7a7f2aed48"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:internet-gateway/igw-09d1d9a2c57892fd9",
            "id": "igw-09d1d9a2c57892fd9",
            "owner_id": "626635413648",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0743c4962cfce6370",
            "association_id": "eipassoc-075a0ed8fd4589358",
            "connectivity_type": "public",
            "id": "nat-049fe4bf40f40641c",
            "network_interface_id": "eni-0bb82dd4eade04e30",
            "private_ip": "10.0.101.119",
            "public_ip": "52.70.101.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c288af1570ed1e6c",
            "tags": {
              "Name": "demo_nat_gateway"
            },
            "tags_all": {
              "Name": "demo_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:route-table/rtb-0d7de53deff7b0cb9",
            "id": "rtb-0d7de53deff7b0cb9",
            "owner_id": "626635413648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049fe4bf40f40641c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_private_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:route-table/rtb-075fb36af847a7ee2",
            "id": "rtb-075fb36af847a7ee2",
            "owner_id": "626635413648",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d1d9a2c57892fd9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_public_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eefd103c9de550e",
            "route_table_id": "rtb-0d7de53deff7b0cb9",
            "subnet_id": "subnet-0c698fb16131cb285"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066bc00a3b18f2448",
            "route_table_id": "rtb-0d7de53deff7b0cb9",
            "subnet_id": "subnet-098a373be0b8b0aae"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096b771def488216b",
            "route_table_id": "rtb-0d7de53deff7b0cb9",
            "subnet_id": "subnet-0a11985a33d65d01a"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d14c3567a1f2ba",
            "route_table_id": "rtb-075fb36af847a7ee2",
            "subnet_id": "subnet-0c288af1570ed1e6c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a3a38e8a7ec3d80",
            "route_table_id": "rtb-075fb36af847a7ee2",
            "subnet_id": "subnet-08d4331bc2a0d87fa"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8dcdca269874ef4",
            "route_table_id": "rtb-075fb36af847a7ee2",
            "subnet_id": "subnet-015df19072079db74"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-0c698fb16131cb285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c698fb16131cb285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-098a373be0b8b0aae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098a373be0b8b0aae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-0a11985a33d65d01a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a11985a33d65d01a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-0c288af1570ed1e6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c288af1570ed1e6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-08d4331bc2a0d87fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4331bc2a0d87fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:subnet/subnet-015df19072079db74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015df19072079db74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626635413648",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e576b6d4dd34930d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626635413648:vpc/vpc-0e576b6d4dd34930d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c66291c41645e7a",
            "default_route_table_id": "rtb-02815ad4937e883fb",
            "default_security_group_id": "sg-086d93e7a7f2aed48",
            "dhcp_options_id": "dopt-0cb1dc3a4cf185fb5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e576b6d4dd34930d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02815ad4937e883fb",
            "owner_id": "626635413648",
            "tags": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "demo_environment",
              "Name": "demo_vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}